# ChangeLog for media-fonts/mplus-outline-fonts
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/mplus-outline-fonts/ChangeLog,v 1.47 2013/08/03 04:54:51 hattya Exp $

  03 Aug 2013; Akinori Hattori <hattya@gentoo.org>
  -mplus-outline-fonts-0_pre052.ebuild:
  remove old ebuild

  03 Aug 2013; Akinori Hattori <hattya@gentoo.org>
  mplus-outline-fonts-0_pre055.ebuild:
  ia64 stable

  03 Aug 2013; Akinori Hattori <hattya@gentoo.org>
  mplus-outline-fonts-0_pre055.ebuild:
  amd64 stable

  03 Aug 2013; Akinori Hattori <hattya@gentoo.org>
  mplus-outline-fonts-0_pre055.ebuild:
  x86 stable

*mplus-outline-fonts-0_pre056 (03 Aug 2013)

  03 Aug 2013; Akinori Hattori <hattya@gentoo.org>
  +mplus-outline-fonts-0_pre056.ebuild:
  new upstream release

  23 May 2013; Akinori Hattori <hattya@gentoo.org>
  mplus-outline-fonts-0_pre052.ebuild:
  ia64 stable

  23 May 2013; Akinori Hattori <hattya@gentoo.org>
  mplus-outline-fonts-0_pre052.ebuild:
  amd64 stable

  23 May 2013; Akinori Hattori <hattya@gentoo.org>
  mplus-outline-fonts-0_pre052.ebuild:
  x86 stable

  23 May 2013; Akinori Hattori <hattya@gentoo.org>
  -mplus-outline-fonts-0_pre040.ebuild, -mplus-outline-fonts-0_pre043-r1.ebuild,
  -mplus-outline-fonts-0_pre043.ebuild, -mplus-outline-fonts-0_pre046.ebuild:
  remove old ebuilds

*mplus-outline-fonts-0_pre055 (23 May 2013)

  23 May 2013; Akinori Hattori <hattya@gentoo.org>
  +mplus-outline-fonts-0_pre055.ebuild:
  new upstream release

*mplus-outline-fonts-0_pre052 (08 Oct 2012)

  08 Oct 2012; Akinori Hattori <hattya@gentoo.org>
  +mplus-outline-fonts-0_pre052.ebuild:
  new upstream release.

*mplus-outline-fonts-0_pre046 (28 Jan 2012)

  28 Jan 2012; MATSUU Takuto <matsuu@gentoo.org>
  +mplus-outline-fonts-0_pre046.ebuild:
  Version bumped.

*mplus-outline-fonts-0_pre043-r1 (18 Dec 2011)

  18 Dec 2011; Naohiro Aota <naota@gentoo.org>
  +mplus-outline-fonts-0_pre043-r1.ebuild: