@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST kakasi-2.3.4.tar.gz 1099258 SHA256 c272560f5c11fe45b011c4e26ada66218fb0109d5582c5876aa49c5e24718534 SHA512 33fa17251ba00163f6d9df208f18c88ff2dfa9891320f1d00fc0c72686bbcc59cf3ccbfb76fa66dfb135a6e942ef4d5d907edc3f1ca9d380c5b7a7d4df090a66 WHIRLPOOL 018eacc55750f22839639248c97888c039b2cd16053f486ce4017080c8462f6aa214f5ac6d18e9a7ec6a00317c54ad8aa666992d889ab96846c680403d1dece3
-EBUILD kakasi-2.3.4-r1.ebuild 834 SHA256 97e605864bd84c0ad7085f606a0537f3e63e522441f86ce994ca530727966a33 SHA512 b3286b0cb38282a501a549e771a24a64456cbd76b86fd44250dc65de685d6250db7f47829fe4d39af20f2920e6387795b6f1c8c84cc145b4d80a4ce6fd60325d WHIRLPOOL fc520bb05a1d072f5027c57054e7ff3c51329530638086fffc82aea242ce1b0806bb388b8b7d3d42e51abb4d7e22933cf1f8c0896071bee84a9055da00bd3130
+EBUILD kakasi-2.3.4-r1.ebuild 791 SHA256 8a810f69286d298f9ca99847fb3568d4c8733b3c6cacb69362e1bbe8dae00c30 SHA512 1b381a117eb40c34519db68dc7cd9d96376508a76c2cd3e37d78727204ce44c48f8a9880d1aae6a51bada230cd41cdcf34df2fb770c34463150b45d6fba8442b WHIRLPOOL 5c9ad5f6004e919bc09a3ce9f481fcd80dbbf49af0ba32684bb721126afd05b5d361308fc27c374bca1691d91b10a0183eedb3db688de8cce5c9d67da6a73fad
 EBUILD kakasi-2.3.4.ebuild 682 SHA256 e6bbe229e9910c22cb5b714fdb9e0fe51c1fdaeea4eb64d2ee7c9572237b72a5 SHA512 7ac03cb080a84ab8033a6f75568c019bf9951f75df0e822baf16ccd609a2429efa12acc299e10961f1a568126da49525a1ff4955385edba6c5c9ad109bf2ff59 WHIRLPOOL f6c7167dc3bb2ffd137974ae79057cff95f01796109506ce1546de905886979e98bc8bd1169b6c322039dd4351be1de4068d2ec6f8dbf2d24a0313515ca58101
-MISC ChangeLog 1995 SHA256 f36e2d1c7a51a36621f14ba7b7d0f25c1a2e10b10d57d1e421ad8309d051e3a0 SHA512 4f88920769439c6317ad8bc8c8d7fc70e4be45c7252ad125f2b87f292217324e189b7ed4f0e31e67246d3b0204654fe652f54cbc85f78b5416c19f9ea9102fa1 WHIRLPOOL 26c8feb703652df3644b99239eeb261a2dbbcee97fe7c125c2bf2df997a291d0ca3a925558549cd7b4ab4b5e67f82261f7168371186bc7d246a0f1097ae7e7e8
+MISC ChangeLog 2085 SHA256 ac4b00d2f3e5b17a784b2c76b3bfd302918d5665c8a232e91704e2de6219e2c2 SHA512 e3ec77e92fbf215046c4330db0373fb7662035ad2ef60d07c474a4ab952894e9b06098419f6cc0bd9236f9bf27b2ca306c108dc01c82b8b73d4eff48e4721e28 WHIRLPOOL c80b61c2335db3b796a04249e2091f064243ea80965ac27dfe083d216f0d19ac6d70f9cedf93216c816dd39ef6e2facbbdbb02fd86033456fb8d89fc8bcb2cda
 MISC metadata.xml 156 SHA256 815820f2e5866d973fafb29a8b8027d022ccea43023309b6dc294cf077598215 SHA512 e46682afa9f674a8685beb29de6485f750484180d86f8980a3c5c220861f38495ac6f4ceda7cf21c317c640d0d218af3ea9bc1a406b207124c1ffb4bcc99628b WHIRLPOOL 347b826ae650374a01eb144ef127dea2fb96c8646b9a1e4b142bce523822988c4597bc2980cc29dcbfeabc1e44ba70136ddea73f1837d4c6ef7d5e3e9d1d1268
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iEYEAREIAAYFAlH8lzwACgkQL46suuyRem1quQCfekykszK0dHjSL5hd5n8WebyD
+YasAn1EQtdpss8WkJBrvgnYhIe+Vujzw
+=G18h
+-----END PGP SIGNATURE-----
