@@ -5,14 +5,14 @@ DIST mplus-TESTFLIGHT-030.tar.gz 17620215 SHA256 558b3a7f2f6de6556d1e9727ca6f2dd
 DIST mplus-TESTFLIGHT-055.tar.xz 8853404 SHA256 19b2139d69c7bf4397920767affa01d2bad200610147abbcd1e2d91b10017f4d SHA512 02846d2291e9d57b3b53fa433400fd4551361bb298c1db951606f24d3baf3853a656329df458b80f504876f0b88afa84c2be2540a2868fc578d94a04d616188a WHIRLPOOL 959747f0e1c3aa09bf494201bf3a34ac1bb407c399c9e393cd0f200eeef21e16a3ad8db8ff0dbaa69011c00dbc844a16faa9d945d5b4cd6c7ec4d50f8fe11ab2
 DIST mplus-TESTFLIGHT-056.tar.xz 9000172 SHA256 f0cc16810effb5e21e559a15895525a9e4179765c5ab44f9140afd18e8ce7b8e SHA512 d88791d59e9ed377d000459f1609bab266a15327fcc51ed0ca23cb5a2d52d53e72a6fa705d8bd0fc8d96643b9e91c3d896424d05270b982f05946ed9a75e8d31 WHIRLPOOL a91b2e19e4d80ed755a427997c0e5c8635dc293eab8b223d42b67b51ba23504a681eb68cbc0526bdcd6b35dd5fc50fd8f6ac114b345561ac209ca5d135014165
 EBUILD mplus-outline-fonts-0_pre030-r1.ebuild 1053 SHA256 fe9d44811e62f9c57c6797b0c7c92ce3b1f8fcf7d94611eb6dbfd3326baa6131 SHA512 2cb466928bf7e6bb7dc3b9d51393be339a6bfc83c3cc2ed9a2c2575956307680f83ccb4fbaa3d301d276eae4bad72aaa091bbb9e085336ada3d3f5f0becd0615 WHIRLPOOL 6dcba7b007225a77734c484d1d1b50157562e1b0f30b6993d28aa007b03624c35fc2f4938ab864f2d3fb636d1068255980be39ead986afdf2beb7eb023346f8b
-EBUILD mplus-outline-fonts-0_pre055.ebuild 1065 SHA256 cf2bfb32786319913ed69fffc4bc607a6740bf07fa32473144051a932dde26f5 SHA512 67816bb2f80be7cf7391f40b6a76d34a6f9960dfaf547a0fd7e56a5801718ace1b1ac48265c1de6a2e2e06c548f1dd6aef07a2b6b7d15733f0783a32f3177283 WHIRLPOOL 7efc05a3e9c496203e8b6f1257443fff902c2c9b9df00634ee6e0e76975cfa9c9be69b99f29761b304e2214134e646f7fa0626c2b871fb87073245fbf24c6f57
-EBUILD mplus-outline-fonts-0_pre056.ebuild 1068 SHA256 4601c4cc21f2f85e6fee95a335a257deaa007ed79479868fdbbcef0112f33cb7 SHA512 cacd8f90d41defa8874e1bd788d8cbc26c0dc5145bc98b8a998b806dd403f30338e3257c1fe5541f31dc10c2769b679e2c17bfb435bc1750990f66bebf942c87 WHIRLPOOL 8c82fe94c1e4cc5f3141a1bb88cfa6cd5d282407402fe5bc81dd9584694fdb918f6c46154213f52be7c521dc52b6cab64166c7740f3c8130900c3adaa72fd660
-MISC ChangeLog 7891 SHA256 c7862577f8edb614147f073de0296728180ede52630a711349abc979e5be322a SHA512 304615596e85b896f406356e83ad7d0fd360b22f74b67bab0081c8ad15b579bd0f6f6ae5b7091675b432e6ee231b93a9d22b4d8d613ad1d0ff0770c612d3435c WHIRLPOOL 49ecaccbf84f6ca7a95527d19a649754718ed13996d69bcabf5c56325d161a591c29d37e55d849b841fe05e51ab33041c63de4b4237951c5b4c18f68b9ebbd4b
+EBUILD mplus-outline-fonts-0_pre055.ebuild 1065 SHA256 3ce740c928e795dff3e7338b2c9fee4539e1697754657e8b9d2cda4f72b69934 SHA512 82dad6745e5f98c28db54d216b930b96c74505d2f72e60c9ed4e3f96b0ba7d69b76c05bba7e961206cd0c00c6ef48a95ccf2fb72c6fff54b1d4a6380bfeac5bb WHIRLPOOL 884afc21eaf7e414d740fa263c27955463cbc46ba39c9437f967bc11e80ae01a24628edcdcaa499b8812930045b4e25c084aa3c7e2fae4df1512c2dffd80f3ac
+EBUILD mplus-outline-fonts-0_pre056.ebuild 1068 SHA256 925f65b604201726f1cf4cf7292456b03ab80e2b87b65fcd779e6b8dd4d885f1 SHA512 25b5c37fc4973c39c1b360e896b80136d4673821d5145d0d1ffa910e54b4e7ed0da388921d681eac1f729d2836989596c41c162371b92abc6767b4023dd28da0 WHIRLPOOL 3153e543e2e52a6a086ed5b5901bf63eba5db6ba445dbac9d4b285444e30f4050301491b5648dfdf78805f927b1ab469c84453a6d016b11681689511e1b9e5f1
+MISC ChangeLog 8038 SHA256 1c6ce8180e9364742dbf88ea7d4db34d1b5f0c856a382b8d53c7a662748d5438 SHA512 f504a9673b3b56f98da4123c3a5a6324b6d2adc27545afcc662b4a19f9fe57f28fcfb3965694892747b568e6c45ca696edc7dd3f6845ba5e7fb250a4b1839bb4 WHIRLPOOL 4ccb17681445a7569a5661fdadc911c76769b6089cab81e920610f38b59a3edeb706b62b442639c3b97c0055a64dec5482d345ef2c344bbcb95b27aa733168bf
 MISC metadata.xml 285 SHA256 75c916c235e71f1c9f70ade5d259a3faaba30dcf8fb5cbfb2459cb21f937ddd4 SHA512 e637f3a989c8cdced93149686310cc458e35b6823efecd79e2852047da52ce6c4967645ba5743dc02324552711b31998e1f17bb7ce9764b1fc42a15d3b75c07c WHIRLPOOL 8ebcc5836ccdf91289f40ba505b0f16d902d176bd36a90a729956a01ca15eac0c8d30856fa224acb5e2e7641c18c12ce3fb194cf12fd61322c0ce29c1d5f12f9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlH8jSUACgkQL46suuyRem0wlQCfTq+NBGewZwGZ16rH0bLLS3CB
-YPQAniAuuZwc45l4lyyFcDi/BkjXY0md
-=xiLU
+iEYEAREIAAYFAlH8l7wACgkQL46suuyRem1TGQCfSxXUeTy1O4rWlBv69g5gzC+S
+abAAnj+uylqzdXWHhsmBD6qXU2PnVgOo
+=qB/N
 -----END PGP SIGNATURE-----
