@@ -1,8 +1,8 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/mplus-outline-fonts/mplus-outline-fonts-0_pre056.ebuild,v 1.1 2013/08/03 04:17:27 hattya Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/mplus-outline-fonts/mplus-outline-fonts-0_pre056.ebuild,v 1.2 2013/08/03 05:40:03 hattya Exp $
 
-EAPI="4"
+EAPI="5"
 
 inherit font
 
