@@ -1,9 +1,10 @@
 DEFINED_PHASES=compile install
 DESCRIPTION=Converts Japanese text between kanji, kana, and romaji
+EAPI=5
 HOMEPAGE=http://kakasi.namazu.org/
 KEYWORDS=~alpha amd64 ~ia64 ~ppc ~ppc64 ~sparc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris
 LICENSE=GPL-2
 SLOT=0
 SRC_URI=http://kakasi.namazu.org/stable/kakasi-2.3.4.tar.gz
 _eclasses_=multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f
-_md5_=8871072e4db3ef44f2731bdde121131c
+_md5_=147169081ef11d9a1b610335523efee8
