@@ -1,7 +1,7 @@
 DEFINED_PHASES=compile install postinst postrm prepare setup
 DEPEND=ipafont? ( media-gfx/fontforge media-fonts/ja-ipafonts ) X? ( x11-apps/mkfontdir media-fonts/encodings )
 DESCRIPTION=M+ Japanese outline fonts
-EAPI=4
+EAPI=5
 HOMEPAGE=http://mplus-fonts.sourceforge.jp/ http://ossipedia.ipa.go.jp/ipafont/
 IUSE=ipafont X
 KEYWORDS=~amd64 ~hppa ~ia64 ~ppc ~x86 ~ppc-macos ~x86-macos
@@ -10,4 +10,4 @@ RESTRICT=binchecks strip
 SLOT=0
 SRC_URI=mirror://sourceforge.jp/mplus-fonts/6650/mplus-TESTFLIGHT-056.tar.xz
 _eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	font	37271e0911f39dd15a28adcaf94f6956	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=aa73498a43569db0735ca04f76b5365a
+_md5_=25b278d37c6b6d7827bbc610875d8954
