@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/kakasi
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/kakasi/ChangeLog,v 1.18 2011/12/18 20:12:27 phajdan.jr Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/kakasi/ChangeLog,v 1.19 2013/08/03 05:37:54 hattya Exp $
+
+  03 Aug 2013; Akinori Hattori <hattya@gentoo.org> kakasi-2.3.4-r1.ebuild:
+  update to EAPI 5
 
   18 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> kakasi-2.3.4-r1.ebuild:
   x86 stable wrt bug #393695
@@ -56,4 +59,3 @@
   30 Apr 2003; Robert Coie <rac@gentoo.org> kakasi-2.3.4.ebuild:
   Initial import, based on ebuild submitted by Henry So, Jr. <henryso@panix.com>
   in bug #19808
-
